--- a/package.json
+++ b/package.json
@@ -15,12 +15,23 @@
     "@fortawesome/react-native-fontawesome": "^0.2.7",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
-    "react": "17.0.2",
+    "Movie": "file:",
+    "react": "^17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "^2.4.2",
+    "react-native-jw-media-player": "^0.2.18",
+    "react-native-media-controls": "^2.3.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-orientation": "^3.1.3",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
-    "react-native-svg": "^12.3.0"
+    "react-native-svg": "^12.3.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-video": "^5.2.0",
+    "react-native-video-controls": "^2.8.1",
+    "react-native-video-player": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "7.17.12",
